# Test

./: .env.local  .gitignore  Makefile  README.md  babel.cfg  docker-compose.yml  package-lock.json  package.json  pyproject.toml  railway.json  requirements.txt  rollup.config.js  setup.sh
.docker/: Dockerfile.app  Dockerfile.worker  docker-compose.yml
auth/: alembic.ini  app.py  exceptions.py  forms.py  lifespan.py  logger.py  scheduler.py  settings.py  settings_class.py  templates.py  worker.py
auth/alembic/: env.py  script.py.mako  table_prefix_codemod.py
auth/alembic/versions/: 2023-08-28_initial_migration.py  2024-01-03_add_adminsessiontoken_and_adminapikey_.py  2024-08-29_add_unique_constraint_on_oauthaccount_.py
auth/apps/: __init__.py
auth/apps/api/: app.py
auth/apps/api/routers/: clients.py  email_templates.py  oauth_providers.py  permissions.py  roles.py  tenants.py  user_fields.py  users.py  webhooks.py
auth/apps/auth/: app.py  exception_handlers.py
auth/apps/auth/forms/: auth.py  password.py  profile.py  register.py  reset.py  verify_email.py
auth/apps/auth/routers/: auth.py  dashboard.py  oauth.py  register.py  reset.py  token.py  user.py  well_known.py
auth/apps/dashboard/: app.py  dependencies.py  exception_handlers.py  validators.py
auth/apps/dashboard/forms/: api_key.py  client.py  email_template.py  oauth_provider.py  permission.py  role.py  tenant.py  theme.py  user.py  user_field.py  webhook.py
auth/apps/dashboard/routers/: api_keys.py  auth.py  clients.py  email_templates.py  oauth_providers.py  permissions.py  roles.py  tenants.py  themes.py  user_fields.py  users.py  webhooks.py
auth/cli/: __main__.py  admin.py  quickstart.py
auth/crypto/: access_token.py  id_token.py  jwk.py  token.py  verify_code.py
auth/db/: engine.py  main.py  migration.py
auth/dependencies/: admin_api_key.py  admin_authentication.py  admin_session.py  auth.py  authentication_flow.py  client.py  db.py  email_provider.py  email_template.py  logger.py  login_hint.py  oauth.py  oauth_provider.py  pagination.py  permission.py  register.py  repositories.py  role.py  session_token.py  ssl.py  tasks.py  telemetry.py  tenant.py  tenant_email_domain.py  theme.py  token.py  user_field.py  user_roles.py  users.py  webhook.py  webhooks.py
auth/locale/de_DE/LC_MESSAGES/: messages.po
auth/locale/en_US/LC_MESSAGES/: messages.po
auth/locale/es_ES/LC_MESSAGES/: messages.po
auth/locale/fr_FR/LC_MESSAGES/: messages.po
auth/locale/it_IT/LC_MESSAGES/: messages.po
auth/locale/pl_PL/LC_MESSAGES/: messages.po
auth/locale/pt_BR/LC_MESSAGES/: messages.po
auth/locale/pt_PT/LC_MESSAGES/: messages.po
auth/locale/zh_CN/LC_MESSAGES/: messages.po
auth/locale/zh_TW/LC_MESSAGES/: messages.po
auth/middlewares/: csrf.py  locale.py
auth/models/: __init__.py  admin_api_key.py  admin_session_token.py  audit_log.py  authorization_code.py  base.py  client.py  email_domain.py  email_template.py  email_verification.py  grant.py  login_session.py  oauth_account.py  oauth_provider.py  oauth_session.py  permission.py  refresh_token.py  registration_session.py  role.py  session_token.py  tenant.py  theme.py  user.py  user_field.py  user_field_value.py  user_permission.py  user_role.py  webhook.py  webhook_log.py
auth/repositories/: __init__.py  admin_api_key.py  admin_session_token.py  audit_log.py  authorization_code.py  base.py  client.py  email_domain.py  email_template.py  email_verification.py  grant.py  login_session.py  oauth_account.py  oauth_provider.py  oauth_session.py  permission.py  refresh_token.py  registration_session.py  role.py  session_token.py  tenant.py  theme.py  user.py  user_field.py  user_permission.py  user_role.py  webhook.py  webhook_log.py
auth/schemas/: __init__.py  client.py  email_template.py  oauth_account.py  oauth_provider.py  permission.py  role.py  tenant.py  user.py  user_field.py  user_permission.py  user_role.py  webhook.py  webhook_log.py  well_known.py
auth/services/: admin.py  authentication_flow.py  initializer.py  oauth_provider.py  password.py  posthog.py  registration_flow.py  tenant_email_domain.py  theme.py  theme_preview.py  user_manager.py  user_role_permissions.py  user_roles.py
auth/services/email/: __init__.py  null.py  postmark.py  sendgrid.py  smtp.py
auth/services/email_template/: contexts.py  initializer.py  renderers.py
auth/services/webhooks/: delivery.py  trigger.py
auth/tasks/: __init__.py  audit_log.py  base.py  cleanup.py  email_verification.py  forgot_password.py  heartbeat.py  register.py  roles.py  user_roles.py  webhooks.py
auth/templates/admin/: base.html  error.html  index.html  layout.html  layout_boost.html  sidebar.html
auth/templates/admin/api_keys/: create.html  token.html
auth/templates/admin/clients/: create.html  edit.html
auth/templates/admin/email_templates/: edit.html
auth/templates/admin/roles/: create.html  (+1 more)
auth/templates/auth/: base.html
auth/templates/macros/: branding.html  modal.html
js/: code-editor.mjs
tests/: conftest.py  data.py  helpers.py  jwks.json  test_app.py  test_apps_api_clients.py  test_apps_api_email_templates.py  test_apps_api_oauth_providers.py  test_apps_api_permissions.py  test_apps_api_roles.py  test_apps_api_tenants.py  test_apps_api_user_fields.py  test_apps_api_users.py  test_apps_auth.py  test_apps_auth_auth.py  test_apps_auth_dashboard.py  test_apps_auth_forms_register.py  test_apps_auth_locale.py  test_apps_auth_oauth.py  test_apps_auth_register.py  test_apps_auth_reset.py  test_apps_auth_token.py  test_apps_auth_user.py  test_apps_auth_well_known.py  test_apps_dashboard_api_keys.py  test_apps_dashboard_auth.py  test_apps_dashboard_clients.py  test_apps_dashboard_email_templates.py  test_apps_dashboard_oauth_providers.py  test_apps_dashboard_permissions.py  test_apps_dashboard_roles.py  test_apps_dashboard_tenants.py  test_apps_dashboard_themes.py  test_apps_dashboard_user_fields.py  test_apps_dashboard_users.py  test_apps_dashboard_webhooks.py  test_db_types.py  test_dependencies_login_hint.py  test_dependencies_user_field.py  test_forms.py  (+20 more)
(+18 files in other folders)
